--- a/Proj4/Assembly-CSharp.csproj
+++ b/Proj4/Assembly-CSharp.csproj
@@ -610,11 +610,17 @@
     <Reference Include="Unity.VSCode.Editor">
         <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.ProBuilder.AssetIdRemapUtility">
+        <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
         <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
         <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ProBuilder.AddOns.Editor">
+        <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.ProBuilder.AddOns.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
         <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
@@ -624,6 +630,12 @@
     </Reference>
     <Reference Include="Unity.TextMeshPro">
         <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ProBuilder">
+        <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.ProBuilder.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ProBuilder.Editor">
+        <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\Unity.ProBuilder.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
         <HintPath>C:\Users\User\Documents\7semestre\jogos\Jogo3D\Proj4\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
