--- a/Proj4/Assembly-CSharp.csproj
+++ b/Proj4/Assembly-CSharp.csproj
@@ -93,6 +93,8 @@
      <Compile Include="Assets\_Scripts\LockControl.cs" />
      <Compile Include="Assets\_Scripts\SmallLock.cs" />
      <Compile Include="Assets\_Scripts\RockVanish.cs" />
+     <Compile Include="Assets\_Scripts\OpenRoomDoor.cs" />
+     <Compile Include="Assets\_Scripts\LockVanish.cs" />
      <None Include="Assets\NatureStarterKit2\Standard Assets\Effects\ImageEffects\Shaders\Tonemapper.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\NatureStarterKit2\Standard Assets\Effects\ImageEffects\Shaders\GlobalFog.shader" />
