timer e fim de jogo

--- a/Proj4/Assembly-CSharp.csproj
+++ b/Proj4/Assembly-CSharp.csproj
@@ -95,6 +95,8 @@
      <Compile Include="Assets\_Scripts\RockVanish.cs" />
      <Compile Include="Assets\_Scripts\OpenRoomDoor.cs" />
      <Compile Include="Assets\_Scripts\LockVanish.cs" />
+     <Compile Include="Assets\_Scripts\UI_Timer.cs" />
+     <Compile Include="Assets\_Scripts\UI_FimDeJogo.cs" />
      <None Include="Assets\NatureStarterKit2\Standard Assets\Effects\ImageEffects\Shaders\Tonemapper.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\NatureStarterKit2\Standard Assets\Effects\ImageEffects\Shaders\GlobalFog.shader" />
